syntax = "proto3";

package access_v1;

option go_package = "github.com/sparhokm/go-course-ms-auth/pkg/access_v1;access_v1";

service AccessV1 {
  rpc Check(CheckIn) returns (CheckOut);
}

message CheckIn {
  string endpointAddress = 1;
}

message CheckOut {
  int64 id = 1;
}